HSTTWO-4735 Complete the learning tests and validate the $ref pointers